# ICFPC2007

./: .clang-format  .gitignore  CMakeLists.txt  DNAExplorer.cabal  HintPrefix.txt  mainWindow.ui  package.yaml  run_selfcheck.bat  run_selfcheck.sh  run_unmodified.bat  run_unmodified.sh  stack.yaml
DNAProcessor/: .gitignore  DNAProcessor.cabal
DNAProcessor/src/: DNA.hs  DNAByteStr.hs  DNAProcessor.hs  DNASeq.hs  Main.hs  ProcessorState.hs  Test.hs
RNAProcessor/: RNAProcessor.cabal
RNAProcessor/src/: Color.hs  Direction.hs  Main.hs  RNA.hs  Test.hs  make_main.bat  make_main.sh  make_main_release.sh
app/: Main.hs
rna-interactive/: CMakeLists.txt
rna-interactive/src/: bucket.cpp  main.cpp  mainview.cpp  mainview.h  mainview.ui  prefixmodel.cpp  prefixmodel.h  rnaprocessor.cpp  rnaprocessor.h
rnaproc/: .gitignore  CMakeLists.txt  Makefile  bucket.h  imageview.cpp  imageview.h  imageview.ui  main.cpp  moc_bucket.cpp  moc_imageview.cpp  moc_rnaprocessor.cpp  rnaproc.pro  rnaprocessor.cpp  rnaprocessor.h  ui_imageview.h
src/: Color.hs  DNA.hs  DNAByteStr.hs  DNAProcessor.hs  DNASeq.hs  DNAops.hs  GUI.hs  ProcessorState.hs  RNA.hs  RNAprocessor.hs
test/: Spec.hs  TestDNA.hs  TestDraw.hs
