cabal-version: 3.0
name: DNAProcessor
version: 0.0.1
build-type: Simple
license: BSD-3-Clause-Attribution
license-file: ""
copyright:
maintainer:
stability:
homepage:
package-url:
bug-reports:
synopsis:
description: .
category:
author:
tested-with: GHC ==0 GHC -any
data-files:
data-dir:
extra-source-files:
extra-tmp-files:
 
executable DNAProcessor
  main-is: Main.hs
  buildable: True
  build-depends: array -any, base -any, bytestring -any, containers -any, mtl -any
  cpp-options:
  cc-options:
  ld-options:
  pkgconfig-depends:
  frameworks:
  c-sources:
  default-language: Haskell2010
  other-languages:
  default-extensions:
  other-extensions:
  extra-libraries:
  extra-lib-dirs:
  includes:
  install-includes:
  include-dirs:
  hs-source-dirs: src
  other-modules: ProcessorState DNASeq DNAProcessor DNAByteStr DNA
  ghc-prof-options:
  ghc-shared-options:
  ghc-options: -O2
  hugs-options:
  nhc98-options:
  jhc-options:
 
executable testDNAproc
  main-is: Test.hs
  buildable: True
  build-depends: array -any, base -any, bytestring -any, containers -any, mtl -any
  cpp-options:
  cc-options:
  ld-options:
  pkgconfig-depends:
  frameworks:
  c-sources:
  default-language: Haskell2010
  other-languages:
  default-extensions:
  other-extensions:
  extra-libraries:
  extra-lib-dirs:
  includes:
  install-includes:
  include-dirs:
  hs-source-dirs: src
  other-modules: ProcessorState DNASeq DNAProcessor DNAByteStr DNA
  ghc-prof-options:
  ghc-shared-options:
  ghc-options: -O2
  hugs-options:
  nhc98-options:
  jhc-options:
