cabal-version: 3.0
name: RNAProcessor
version: 0.0.1
build-type: Simple
license: BSD-3-Clause-Attribution
license-file: ""
copyright:
maintainer:
stability:
homepage:
package-url:
bug-reports:
synopsis:
description: .
category:
author:
tested-with:
data-files:
data-dir:
extra-source-files:
extra-tmp-files:
 
executable RNAProcessor
  main-is: Main.hs
  buildable: True
  build-depends: array -any, base -any, cairo -any, deepseq -any,
               monad-loops -any, gtk -any, mtl -any, directory -any
  cpp-options:
  cc-options:
  ld-options:
  pkgconfig-depends:
  frameworks:
  c-sources:
  default-language: Haskell2010
  other-languages:
  default-extensions:
  other-extensions:
  extra-libraries:
  extra-lib-dirs:
  includes:
  install-includes:
  include-dirs:
  hs-source-dirs: src
  other-modules: RNA Direction Color
  ghc-prof-options:
  ghc-shared-options:
  ghc-options: -O2 -threaded
  hugs-options:
  nhc98-options:
  jhc-options:
 
executable testRNAProcessor
  main-is: Test.hs
  buildable: True
  build-depends: array -any, base -any, cairo -any, deepseq -any,
               gtk -any, mtl -any
  cpp-options:
  cc-options:
  ld-options:
  pkgconfig-depends:
  frameworks:
  c-sources:
  default-language: Haskell2010
  other-languages:
  default-extensions:
  other-extensions:
  extra-libraries:
  extra-lib-dirs:
  includes:
  install-includes:
  include-dirs:
  hs-source-dirs: src
  other-modules: RNA Direction Color
  ghc-prof-options:
  ghc-shared-options:
  ghc-options:
  hugs-options:
  nhc98-options:
  jhc-options:
